<resources>
    <string name="app_name">DSLR Browser</string>
    <string name="title_cameras">Cameras</string>
    <string name="title_photos">Photos</string>
    <string name="title_settings">Settings</string>

    <string name="general_preferences">General Preferences</string>
    <string name="show_canon_only">Show Canon only</string>
    <string name="show_canon_only_desc">Shows or hides non-canon devices on your network</string>
    <string name="insert_gps">Insert GPS</string>
    <string name="insert_gps_desc">Inject geolocation information</string>
    <string name="download_to_album">Download to album</string>
    <string name="download_to_album_desc">Download to a separated album</string>

    <string name="title_search">Refresh</string>
    <string name="title_download_all">Download all</string>
    <string name="sync_with_phone">Sync with phone</string>
    <string name="canon_eos_7d_mark_ii">Canon EOS 7D Mark II</string>
    <string name="_10_153">10/153</string>
    <string name="title_selection_mode_on">selection mode on</string>
    <string name="sample_image_title">IMG_1234.JPG</string>
    <string name="device_list_description">Device list</string>
    <string name="photos_list_description">Photos list</string>
</resources>
